kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-crm-service
  namespace: java-crm
  labels:
    app: java-crm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: java-crm
